--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ li {
     border-bottom: solid 2px #dadada;
     background: whitesmoke;
     text-align: center;
-    margin-bottom: 5px;/*下のバーとの余白*/
+    margin-bottom: 5px;
     padding: 0.5em;
-    list-style-type: none;/*リストの黒丸を消す*/
+    list-style-type: none;
     font-weight: bold;
 }
 
@@ -32,4 +32,8 @@ img {
     width: 85%;
     margin: auto;
     display: block;
+}
+
+p {
+    text-align: center
 }
